--- a/bonus/hover-styles.html
+++ b/bonus/hover-styles.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Sai Linn Thu</title>
+  <title>Hover Styling</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -12,11 +12,11 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Sai Linn Thu</a>
+      <a href="#" id="logo">Your Name</a>
       <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
       </nav>
     </div>
   </header>
@@ -49,16 +49,16 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        <img src="assets/images/github-128.png" class="social" alt="Github">
+        <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn">
+        <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow">
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Sai Linn Thu
+      Copyright &copy; 2016 Your Name
     </div>
   </footer>
 </body>
